--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@ Criador da Página: João Pedro Leonardi Lopes!!
 </a>
 
 <h2>Quem sou?</h2>
+<h3>Porque esse site existe?</h3>
 
 <p>
 Estudante da <a target="_blank" href="https://www.unisanta.br">Universidade Santa Cecília</a>, cursando Sistemas da Informalção. ingressei nesta área pelo mercado de trabalho quecido e por minha afinidade com tecnologia. Trabalho atualmente na Kalunga como vendedor de Informática. Em meu tempo livre gosto de ver filmes e séries, ouvir musica,  sair com minha namorada e principalmente, jogar videogame. 
