--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 Criador da Página: João Pedro Leonardi Lopes!!
 -->
 <h1>João Pedro Leonardi - 158090</h1>
+<h2>editado por - Vinícius Reis</h2>
 
 <a target="_blank" href="https://www.instagram.com/_lleonardi/">
 <img src="C:\Users\Think\Desktop\joao.jpg" alt="Foto do estudante João Pedro">
